methods.flowerpot.FlowerPot.scala.error
Compilation error:
FlowerPot:6: error: java.awt.Color does not take parameters
  faireFleur(Color.orange())
                         ^FlowerPot:17: error: not found: value setCouleurBross
  setCouleurBross(c1)
  ^